Add notes on native build.